Replace Adblock Thai filter by EasyList Thailand (#583)
* New filter https://github.com/AdguardTeam/FiltersRegistry/issues/580

* fix description

* excanged the old filter

* fix filterId

* update en strings for 202 filter

* fix typos

* revert description

* added new lang in locales

* update locales

Co-authored-by: zloyden <33488229+zloyden@users.noreply.github.com>

--- a/locales/de/filters.json
+++ b/locales/de/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Sperrt störende Web-Elemente und gibt frei gewordene Bildschirmbereich frei."
 	},
 	{
-		"filter.202.name": "Thai Ads Filters (Thailändisch)",
+		"filter.202.name": "EasyList Thailand",
 		"filter.202.description": "Filter, der Werbung auf thailändischen Websites sperrt."
 	},
 	{
