--- a/locales/hu/filters.json
+++ b/locales/hu/filters.json
@@ -160,10 +160,6 @@
 		"filter.201.description": "Blokkolja a bosszantó webes elemeket és visszaszerzi az a képernyő elvesztegetett részét."
 	},
 	{
-		"filter.202.name": "Thaiföldi hirdetésszűrők",
-		"filter.202.description": "Szűrőlista, amely blokkolja a hirdetéseket a thai nyelvű webhelyeken."
-	},
-	{
 		"filter.203.name": "Magyar szűrő",
 		"filter.203.description": "Hufilter. Szűrőlista, amely lehetővé teszi a hirdetések blokkolását a magyar nyelvű webhelyeken."
 	},
@@ -330,5 +326,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Ez a lista lefedi a Norvég, Dán, Izlandi, a különböző dán területekhez, valamint a Számi őslakosokhoz köthető webhelyeket."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout kellemetlenségek elleni listája",
+		"filter.250.description": "Ez a lista az AdGuard és a Fanboy kellemetlenségek elleni listák stílusában készült. Egyesíti Dandelion Sprout legjobb és leggyakrabban karbantartott nemzetközi listáit, az egyszerűség kedvéért válogatott összeállításként."
+	},
+	{
+		"filter.251.name": "URL rövidítő",
+		"filter.251.description": "Automatikusan eltávolítja a szükségtelen '$' és '&' értékeket az URL-ekből, így könnyebben másolhatók ki az URL-sávból és illeszthetők be linkként máshová."
 	}
 ]
