--- a/locales/it/filters.json
+++ b/locales/it/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Blocca gli elementi web irritanti e recupera lo spazio perso sullo schermo."
 	},
 	{
-		"filter.202.name": "Filtro Annunci tailandese",
+		"filter.202.name": "EasyList Thailandia",
 		"filter.202.description": "Filtro che blocca annunci su siti web tailandesi."
 	},
 	{
@@ -180,7 +180,7 @@
 		"filter.207.description": "Rimuove gli avvisi anti blocca-annunci ed altri messaggi intrusivi."
 	},
 	{
-		"filter.208.name": "Lista nera di URL Online Malevoli",
+		"filter.208.name": "Lista nera di URL Malevoli Online",
 		"filter.208.description": "Blocca i domini noti per la propagazione di malware e spyware."
 	},
 	{
@@ -252,7 +252,7 @@
 		"filter.228.description": "Blocca gli annunci sulle piattaforme video cinesi (MangoTV, DouYu e altre)."
 	},
 	{
-		"filter.229.name": "Non sono interessato ai cookie",
+		"filter.229.name": "Non mi importa dei cookie",
 		"filter.229.description": "Nasconde avvisi irritanti sui cookie da quasi tutti i siti web, evitandoti clic non necessari."
 	},
 	{
@@ -336,7 +336,7 @@
 		"filter.250.description": "Questo elenco è realizzata nel medesimo stile degli elenchi AdGuard Fanboy Anti-Fastidio. Combina molti degli elenchi internazionali più fieri e sottoposti a frequente manutenzione da parte di Dandelion Sprout, come raccolta curata e contraddistinta della semplicità."
 	},
 	{
-		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.name": "Legittima riduzione degli URL",
 		"filter.251.description": "Rimuove automaticamente i valori \"$\" e \"&\" non necessari dagli URL, rendendoli più facili da copiare dalla barra degli Indirizzi per incollarli altrove come collegamenti."
 	}
 ]
