--- a/locales/ja/filters.json
+++ b/locales/ja/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "迷惑なWeb要素をブロックし、失われた画面の領域を取り戻します。"
 	},
 	{
-		"filter.202.name": "Thai Ads Filters",
+		"filter.202.name": "EasyList Thailand",
 		"filter.202.description": "タイのサイトで広告をブロックするフィルター。"
 	},
 	{
