--- a/locales/ko/filters.json
+++ b/locales/ko/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "화면 공간을 차지하는 방해 요소를 차단합니다."
 	},
 	{
-		"filter.202.name": "태국 광고 필터",
+		"filter.202.name": "EasyList 태국",
 		"filter.202.description": "태국 사이트 광고 차단 필터."
 	},
 	{
