--- a/locales/nl/filters.json
+++ b/locales/nl/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Blokkeert ergerlijke web elementen en herstelt verloren ruimte op het scherm."
 	},
 	{
-		"filter.202.name": "Thaise Ads Filters",
+		"filter.202.name": "EasyList Thailand",
 		"filter.202.description": "Blokkeert advertenties op Thaise websites."
 	},
 	{
