--- a/locales/tr/filters.json
+++ b/locales/tr/filters.json
@@ -1,7 +1,7 @@
 [
 	{
 		"filter.1.name": "AdGuard Rusça filtresi",
-		"filter.1.description": "AdGuard Rusça filtresi. Özellikle Rusça sitelerde reklamları engelleyen filtre."
+		"filter.1.description": "Özellikle Rusça sitelerde reklamları engelleyen filtre."
 	},
 	{
 		"filter.2.name": "AdGuard Temel filtresi",
@@ -21,15 +21,15 @@
 	},
 	{
 		"filter.6.name": "AdGuard Almanca filtresi",
-		"filter.6.description": "EasyList Almanya + AdGuard Almanca filtresi. Özellikle Almanca sitelerde reklamları engelleyen filtre."
+		"filter.6.description": "EasyList Germany + AdGuard Almanca filtresi. Özellikle Almanca sitelerde reklamları engelleyen filtre."
 	},
 	{
 		"filter.7.name": "AdGuard Japonca filtresi",
-		"filter.7.description": "AdGuard Japonca filtresi. Özellikle Japonca sitelerde reklamları engelleyen filtre."
+		"filter.7.description": "Özellikle Japonca sitelerde reklamları engelleyen filtre."
 	},
 	{
 		"filter.8.name": "AdGuard Flemenkçe filtresi",
-		"filter.8.description": "EasyList Flemenkçe + AdGuard Flemenkçe filtresi. Özellikle Flemenkçe sitelerde reklamları engelleyen filtre."
+		"filter.8.description": "EasyList Dutch + AdGuard Flemenkçe filtresi. Özellikle Flemenkçe sitelerde reklamları engelleyen filtre."
 	},
 	{
 		"filter.9.name": "AdGuard İspanyolca/Portekizce filtresi",
@@ -57,7 +57,7 @@
 	},
 	{
 		"filter.15.name": "AdGuard DNS filtresi",
-		"filter.15.description": "Temel olarak, birkaç filtreyi birleştirir (AdGuard Temel filtresi, Sosyal medya filtresi, İzleme Koruması filtresi, Mobil Reklam filtresi, EasyList filtresi ve EasyPrivacy filtresi) ve DNS ile daha iyi filtreleme ile reklam engellemek için basitleştirilmiş filtreleri kullanır."
+		"filter.15.description": "Temel olarak birkaç filtreyi birleştirir (AdGuard Temel filtresi, Sosyal Medya filtresi, İzleme Koruması filtresi, Mobil Reklam filtresi, EasyList ve EasyPrivacy) ve DNS düzeyinde reklam engellemeyle daha uyumlu olması için özel olarak basitleştirilmiştir."
 	},
 	{
 		"filter.16.name": "AdGuard Fransızca filtresi",
@@ -69,7 +69,7 @@
 	},
 	{
 		"filter.224.name": "AdGuard Çince filtresi",
-		"filter.224.description": "EasyList Çin + AdGuard Çince filtresi. Özellikle Çince sitelerde reklamları engelleyen filtre."
+		"filter.224.description": "EasyList China + AdGuard Çince filtresi. Özellikle Çince sitelerde reklamları engelleyen filtre."
 	},
 	{
 		"filter.101.name": "EasyList",
@@ -160,7 +160,7 @@
 		"filter.201.description": "Can sıkıcı internet öğelerini engeller ve kaybolan ekran alanını geri alır."
 	},
 	{
-		"filter.202.name": "Thai Ads Filters",
+		"filter.202.name": "EasyList Thailand",
 		"filter.202.description": "Tayca sitelerinde reklamları engelleyen filtre."
 	},
 	{
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Toplu kısa mesajlaşma, sahte çevrimiçi mağazalar vb. gibi çeşitli dolandırıcılık türlerine karşı koruma sağlayan filtre."
+		"filter.232.description": "Toplu kısa mesajlaşma, sahte çevrimiçi mağazalar, vb. gibi çeşitli dolandırıcılık türlerine karşı koruma sağlayan filtre."
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
@@ -309,7 +309,7 @@
 	},
 	{
 		"filter.243.name": "Frellwit's Swedish Filter",
-		"filter.243.description": "Bölgesel İsveç reklamlarını, izlemeyi, sosyal medyayı, can sıkıcı öğeleri, sponsorlu makaleleri vb. kaldırmayı hedefleyen uBlock Origin için bir filtre."
+		"filter.243.description": "Bölgesel İsveç reklamlarını, izlemeyi, sosyal medyayı, can sıkıcı öğeleri, sponsorlu makaleleri, vb. kaldırmayı hedefleyen uBlock Origin için bir filtre."
 	},
 	{
 		"filter.244.name": "YousList",
