--- a/locales/tr/tags.json
+++ b/locales/tr/tags.json
@@ -81,7 +81,7 @@
 	},
 	{
 		"tag.16.description": "EasyList Flemenkçe filtresini kaynak alır",
-		"tag.16.name": "EasyList Flemenkçe filtre referansı"
+		"tag.16.name": "EasyList Dutch filtre referansı"
 	},
 	{
 		"tag.17.description": "İspanyolca sitelerdeki reklamları engellemek için özel olarak tasarlandı",
