--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Blocks annoying web elements and reclaims lost screen real estate."
 	},
 	{
-		"filter.202.name": "Thai Ads Filters",
+		"filter.202.name": "EasyList Thailand",
 		"filter.202.description": "Filter that blocks ads on Thai sites."
 	},
 	{
