--- a/locales/es_ES/filters.json
+++ b/locales/es_ES/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Bloquea elementos molestos y recupera el espacio perdido de la pantalla."
 	},
 	{
-		"filter.202.name": "Thai Ads Filters",
+		"filter.202.name": "EasyList Tailandia",
 		"filter.202.description": "Filtro que bloquea los anuncios en sitios web tailandeses."
 	},
 	{
