--- a/locales/fi/filters.json
+++ b/locales/fi/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Estää ärsyttäviä verkkoelementtejä ja vapauttaa menetettyä näyttötilaa."
 	},
 	{
-		"filter.202.name": "Thai Ads Filters",
+		"filter.202.name": "EasyList Thailand",
 		"filter.202.description": "Suodatin, joka estää mainoksia thainkielisillä sivustoilla."
 	},
 	{
