--- a/locales/fr/filters.json
+++ b/locales/fr/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Bloque les éléments Web gênants et récupère les espaces d'écran perdus."
 	},
 	{
-		"filter.202.name": "Thai Ads Filters",
+		"filter.202.name": "EasyList Thailande",
 		"filter.202.description": "Filtre bloquant les publicités sur les sites Thaïlandais."
 	},
 	{
