--- a/locales/he/filters.json
+++ b/locales/he/filters.json
@@ -57,7 +57,7 @@
 	},
 	{
 		"filter.15.name": "מסנן שמות תחום מופשטים של AdGuard",
-		"filter.15.description": "מסנן שמשומש על ידי אדגגארד DNS. בעיקרון, משלב כמה מסננים (מסנן אנגלית, מסנן חברתי, מסנן ריגול, מסנן מודעות להתקנים ניידים, EasyList ו EasyPrivacy) טרנספורמצית DNS לסינון טוב יותר"
+		"filter.15.description": "מסנן שמורכב מכמה מסננים אחרים (מסנן הבסיס של AdGuard, מסנן מדיה חברתית, מסנן הגנה מפני מעקב, מסנן פרסומות לניידים, EasyList ו־EasyPrivacy) ומופשט במיוחד כדי להיות תואם עם חסימת פרסומות ברמת DNS."
 	},
 	{
 		"filter.16.name": "מסנן צרפתי של AdGuard",
@@ -160,7 +160,7 @@
 		"filter.201.description": "חוסם אלמנטי רשת מטרידים ומשיב שטח אבוד של מסך."
 	},
 	{
-		"filter.202.name": "מסננים של פרסומות תאילנדיות",
+		"filter.202.name": "EasyList תאילנד",
 		"filter.202.description": "מסנן שחוסם פרסומות באתרים תאילנדיים."
 	},
 	{
