--- a/locales/pl/filters.json
+++ b/locales/pl/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Blokuje irytujące elementy sieci i odzyskuje utracone miejsce na ekranie."
 	},
 	{
-		"filter.202.name": "Filtry reklam tajlandzkich",
+		"filter.202.name": "EasyList Tajlandia",
 		"filter.202.description": "Filtr blokujący reklamy w witrynach tajskich."
 	},
 	{
