--- a/locales/ru/filters.json
+++ b/locales/ru/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Блокирует раздражающие элементы веб-страниц и восстанавливает потерянное пространство на экране."
 	},
 	{
-		"filter.202.name": "Thai Ads Filters",
+		"filter.202.name": "EasyList Тайский",
 		"filter.202.description": "Фильтр, который блокирует рекламу на тайских сайтах."
 	},
 	{
