--- a/locales/zh/filters.json
+++ b/locales/zh/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "阻止恼人的web元素，并夺回丢失的屏幕空间。"
 	},
 	{
-		"filter.202.name": "泰语广告过滤器",
+		"filter.202.name": "EasyList 泰国",
 		"filter.202.description": "拦截泰语站点广告的过滤器"
 	},
 	{
