--- a/locales/zh_TW/filters.json
+++ b/locales/zh_TW/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "封鎖惱人的網路元件，並收回失去的螢幕所有權。"
 	},
 	{
-		"filter.202.name": "Thai Ads Filters",
+		"filter.202.name": "EasyList Thailand",
 		"filter.202.description": "封鎖於泰文網站上的廣告之過濾器。"
 	},
 	{
