--- a/locales/uk/filters.json
+++ b/locales/uk/filters.json
@@ -160,6 +160,10 @@
 		"filter.201.description": "Блокує надокучливі веб елементи й відновлює втрачений вміст екрану."
 	},
 	{
+		"filter.202.name": "EasyList Thailand",
+		"filter.202.description": "Фільтри, який блокує рекламу на таїландських сайтах."
+	},
+	{
 		"filter.203.name": "Угорський фільтр",
 		"filter.203.description": "Hufilter. Фільтр, призначений спеціально для вилучення реклами на вебсайтах угорською мовою."
 	},
