--- a/locales/be/filters.json
+++ b/locales/be/filters.json
@@ -160,6 +160,10 @@
 		"filter.201.description": "Блакуе раздражняльныя элементы ўэб-старонак і аднаўляе страчаную прастору на экране."
 	},
 	{
+		"filter.202.name": "Тайскія рэкламныя фільтры",
+		"filter.202.description": "Фільтр, які блакуе рэкламу на тайскіх сайтах."
+	},
+	{
 		"filter.203.name": "Вугорскі фільтр",
 		"filter.203.description": "Фільтр, што блакуе рэкламу на сайтах на вугорскай мове."
 	},
@@ -241,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Фільтр, які падаляе рэкламу, трэкеры і розныя скрыпты з сайтаў з карэйскім кантэнтам. Заснаваны на фільтрах Corset, Korean Adblock filter, Youslist. З'яднаны і дапоўнены правіламі AdGuard для палепшанай фільтрацыі. Гэты фільтр лепш выкарыстоўваць разам з Базавым фільтрам AdGuard."
+		"filter.227.description": "Фільтр, які падаляе рэкламу і розныя скрыпты з сайтаў з карэйскім кантэнтам. З'яднаны і дапоўнены правіламі AdGuard для палепшанай фільтрацыі. Гэты фільтр лепш выкарыстоўваць разам з Базавым фільтрам AdGuard."
 	},
 	{
 		"filter.228.name": "xinggsf",
