--- a/locales/it/filters.json
+++ b/locales/it/filters.json
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "Elenco KR",
-		"filter.227.description": "Filtro che rimuove annunci e vari script da siti web con contenuto coreano. Basato su Corset, filtro Blocca-annunci coreano, Youslist. Combinato e potenziato con regole specifiche di AdGuard per un filtraggio avanzato. Questo filtro dovrebbe essere utilizzato insieme al filtro AdGuard di Base."
+		"filter.227.description": "Filtro che rimuove annunci e vari script da siti web con contenuto coreano. Combinato e potenziato con regole specifiche di AdGuard per un filtraggio avanzato. Questo filtro dovrebbe essere utilizzato insieme al filtro AdGuard di Base."
 	},
 	{
 		"filter.228.name": "xinggsf",
