--- a/locales/pt/filters.json
+++ b/locales/pt/filters.json
@@ -160,6 +160,10 @@
 		"filter.201.description": "Bloqueia elementos irritantes da web e recupera o espaço perdido no ecrã."
 	},
 	{
+		"filter.202.name": "EasyList Tailandês",
+		"filter.202.description": "Filtro que bloqueia anúncios em sítios tailandês."
+	},
+	{
 		"filter.203.name": "Filtro húngaro",
 		"filter.203.description": "Hufilter. Filtro que permite o bloqueio de anúncios em sítios com o conteúdo em húngaro."
 	},
@@ -241,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Filtro que remove anúncios e vários scripts de sítios com conteúdo coreano. Baseado em Corset, filtro Adblock coreano, Youslist. Combinado e aumentado com regras específicas do AdGuard para filtragem aprimorada. Espera-se que esse filtro seja usado junto com o filtro base do AdGuard."
+		"filter.227.description": "Filtro que remove anúncios e vários scripts de sítios com conteúdo coreano. Combinado e aumentado com regras específicas do AdGuard para filtragem aprimorada. Espera-se que esse filtro seja usado junto com o filtro base do AdGuard."
 	},
 	{
 		"filter.228.name": "xinggsf",
