--- a/locales/sl/filters.json
+++ b/locales/sl/filters.json
@@ -160,6 +160,10 @@
 		"filter.201.description": "Zavira nadležne spletne elemente in povrne izgubljeno resnično stanje zaslona."
 	},
 	{
+		"filter.202.name": "Tajski EasyList",
+		"filter.202.description": "Filter za onemogočanje oglasov na tajskih spletnih straneh."
+	},
+	{
 		"filter.203.name": "Madžarski filter",
 		"filter.203.description": "Hufilter. Seznam filtrov, ki posebej odstrani oglase na spletnih straneh v madžarščini."
 	},
@@ -241,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "Seznam-KR",
-		"filter.227.description": "Filter, ki odstrani oglase in različne skripte s spletnih strani s korejsko vsebino. Na podlagi Corset, korejskega filtra Adblock, vašega seznama. Kombinirano in razširjeno s posebnimi pravili AdGuard za izboljšano filtriranje. Ta filter naj bi se uporabljal skupaj s filtrom AdGuard Base."
+		"filter.227.description": "Filter, ki odstrani oglase in različne skripte s spletnih strani s korejsko vsebino. Kombinirano in razširjeno s posebnimi pravili AdGuard za izboljšano filtriranje. Ta filter naj bi se uporabljal skupaj s filtrom AdGuard Base."
 	},
 	{
 		"filter.228.name": "xinggsf",
