--- a/locales/sr/filters.json
+++ b/locales/sr/filters.json
@@ -64,6 +64,10 @@
 		"filter.16.description": "EasyList francuski + AdGuard francuski filter. Lista filtera koja posebno uklanja reklame sa sajtova na francuskom jeziku."
 	},
 	{
+		"filter.17.name": "AdGuard URL filter praćenja",
+		"filter.17.description": "Filter koji poboljšava privatnost uklanjanjem parametara praćenja sa URLova."
+	},
+	{
 		"filter.224.name": "AdGuard kineski filter",
 		"filter.224.description": "EasyList kineski + AdGuard kineski filter. Lista filtera koja posebno uklanja reklame sa sajtova na kineskom jeziku."
 	},
@@ -156,6 +160,14 @@
 		"filter.201.description": "Blokira dosadne veb elemente i oslobađa izgubljen prostor na ekranu."
 	},
 	{
+		"filter.202.name": "EasyList Tajland",
+		"filter.202.description": "Filter koji blokira reklame na tajskim sajtovima."
+	},
+	{
+		"filter.203.name": "Mađarski filter",
+		"filter.203.description": "Hufilter. Lista filtera koja uklanja reklame sa sajtova na mađarskom jeziku."
+	},
+	{
 		"filter.204.name": "Peter Lowe's Blocklist",
 		"filter.204.description": "Filter koji blokira reklame, praćenja i druge prljave stvari."
 	},
@@ -220,16 +232,40 @@
 		"filter.222.description": "Lista filtera za blokiranje reklama na persijskom jeziku."
 	},
 	{
+		"filter.223.name": "Fanboy's Swedish",
+		"filter.223.description": "Lista filtera za sajtove na švedskom."
+	},
+	{
 		"filter.225.name": "Fanboy's Anti-Facebook List",
 		"filter.225.description": "Upozorenje. ovo će pokvariti sajtove sa Facebook komentarima i takođe može slomiti neke Facebook aplikacije ili igre."
+	},
+	{
+		"filter.226.name": "Fanboy's Vietnamese",
+		"filter.226.description": "Lista filtera za sajtove na vijetnamskom."
+	},
+	{
+		"filter.227.name": "List-KR",
+		"filter.227.description": "Filter koji uklanja oglase i razne skripte sa veb lokacija sa korejskim sadržajem. Kombinovano i dopunjeno sa pravilima specifičnim za AdGuard za poboljšano filtriranje. Očekuje se da će se ovaj filter koristiti zajedno sa AdGuard Base filterom."
+	},
+	{
+		"filter.228.name": "xinggsf",
+		"filter.228.description": "Blokira reklame na kineskim video platformama (MangoTV, DouYu i drugim)."
 	},
 	{
 		"filter.229.name": "Ne brinem o kolačićima",
 		"filter.229.description": "Uklanja dosadna upozorenja o kolačićima sa skoro svih sajtova i čuva vas od neophodnih klikova."
 	},
 	{
+		"filter.230.name": "Fanboy's Spanish/Portuguese",
+		"filter.230.description": "Filter stvoren za špansko i portugalsko govorno područje."
+	},
+	{
 		"filter.231.name": "EasyList španski",
 		"filter.231.description": "Španski dodatak za EasyList."
+	},
+	{
+		"filter.232.name": "KAD - Przekręty",
+		"filter.232.description": "Filter koji štiti od raznih vrsta prevara, kao što su masovne razmene tekstualnih poruka, lažne Internet prodavnice itd."
 	},
 	{
 		"filter.233.name": "Adblock List za Finsku",
@@ -294,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's nordijski Filters",
 		"filter.249.description": "Ova lista pokriva sajtove u Norveškoj, Danskoj, Islandu, danskim teritorijama i Sami populaciju."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Ova lista je napravljena u stilu AdGuardove i Fanboy liste nerviranja. Kombinuje mnoge od najponosnijih i najčešće održavanih međunarodnih lista Maslačka Sprouta, kao izlečenu kompilaciju zarad jednostavnosti."
+	},
+	{
+		"filter.251.name": "Legitiman URL skraćivač",
+		"filter.251.description": "Automatski uklanja nepotrebne '$' i '&' vrednosti iz URLova, čineći ih lakšim za kopiranje sa URL trake i lepljenje negde kao vezu."
 	}
 ]
