--- a/locales/tr/filters.json
+++ b/locales/tr/filters.json
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Korece içeriğe sahip web sitelerinden reklamları ve çeşitli betikleri kaldıran filtre. Kore Adblock filtresi, Youslist, Corset filtresi temel alınmıştır. Gelişmiş filtreleme için AdGuard'a özgü kurallarla birleştirildi ve genişletildi. Bu filtrenin AdGuard Temel filtresiyle birlikte kullanılması beklenir."
+		"filter.227.description": "Korece içeriğe sahip web sitelerinden reklamları ve çeşitli betikleri kaldıran filtre. Gelişmiş filtreleme için AdGuard'a özgü kurallarla birleştirildi ve genişletildi. Bu filtrenin AdGuard Temel filtresiyle birlikte kullanılması beklenir."
 	},
 	{
 		"filter.228.name": "xinggsf",
