--- a/locales/uk/filters.json
+++ b/locales/uk/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Блокує надокучливі веб елементи й відновлює втрачений вміст екрану."
 	},
 	{
-		"filter.202.name": "EasyList Thailand",
+		"filter.202.name": "EasyList Таїландський",
 		"filter.202.description": "Фільтри, який блокує рекламу на таїландських сайтах."
 	},
 	{
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Фільтр, який вилучає рекламу та різні скрипти на вебсайтах з корейським вмістом. Базується на Corset, Korean Adblock filter, Youslist. Скомбінований та доповнений спеціальними правилами AdGuard для вдосконаленого фільтрування. Цей фільтр краще використовувати разом з Основним фільтром AdGuard."
+		"filter.227.description": "Фільтр, який вилучає рекламу та різні скрипти на вебсайтах з корейським вмістом. Скомбінований та доповнений спеціальними правилами AdGuard для вдосконаленого фільтрування. Цей фільтр краще використовувати разом з Основним фільтром AdGuard."
 	},
 	{
 		"filter.228.name": "xinggsf",
