--- a/locales/zh_TW/filters.json
+++ b/locales/zh_TW/filters.json
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "從具有韓文內容的網站上移除廣告和各種腳本的過濾器。基於 Corset、Korean Adblock filter 和 Youslist。為了增進的過濾，被與特定 AdGuard 的規則結合和擴增。此過濾器受預期與 AdGuard 基本過濾器一起被使用。"
+		"filter.227.description": "從具有韓文內容的網站上移除廣告和各種腳本的過濾器。為了增進的過濾，被與特定 AdGuard 的規則結合和擴增。此過濾器受預期與 AdGuard 基本過濾器一起被使用。"
 	},
 	{
 		"filter.228.name": "乘風廣告過濾器",
