--- a/locales/da/filters.json
+++ b/locales/da/filters.json
@@ -160,6 +160,10 @@
 		"filter.201.description": "Blokerer irriterende webelementer og gendanner mistet skærmplads."
 	},
 	{
+		"filter.202.name": "EasyList Thailand",
+		"filter.202.description": "Filter, der blokerer annoncer på thailandske websteder."
+	},
+	{
 		"filter.203.name": "Ungarsk filter",
 		"filter.203.description": "Hufilter. Filterliste, der specifikt fjerner annoncer på ungarsksprogede websteder."
 	},
@@ -241,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Filter, der fjerner annoncer og forskellige scripts fra websteder med koreansk indhold. Baseret på Corset, koreansk Adblock-filter, Youslist. Kombineret og forstærket med AdGuard-specifikke regler til forbedret filtrering. Dette filter antages brugt sammen med AdGuard Basisfilter."
+		"filter.227.description": "Filter, der fjerner annoncer og forskellige scripts fra websteder med koreansk indhold. Kombineret og forstærket med AdGuard-specifikke regler til forbedret filtrering. Dette filter antages brugt sammen med AdGuard Basisfilter."
 	},
 	{
 		"filter.228.name": "xinggsf",
