--- a/locales/es_ES/filters.json
+++ b/locales/es_ES/filters.json
@@ -160,7 +160,7 @@
 		"filter.201.description": "Bloquea elementos molestos y recupera el espacio perdido de la pantalla."
 	},
 	{
-		"filter.202.name": "EasyList Tailandia",
+		"filter.202.name": "EasyList tailandés",
 		"filter.202.description": "Filtro que bloquea los anuncios en sitios web tailandeses."
 	},
 	{
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Filtro que elimina anuncios y varios scripts de los sitios web con contenido coreano. Basado en Corset, Korean Adblock filter, YousList. Combinado y aumentado con reglas específicas de AdGuard para mejorar el filtrado. Se espera que este filtro se utilice junto con el Filtro base."
+		"filter.227.description": "Filtro que elimina anuncios y varios scripts de los sitios web con contenido coreano. Combinado y aumentado con reglas específicas de AdGuard para mejorar el filtrado. Se espera que este filtro se utilice junto con el Filtro base."
 	},
 	{
 		"filter.228.name": "xinggsf",
