--- a/locales/hr/filters.json
+++ b/locales/hr/filters.json
@@ -160,6 +160,10 @@
 		"filter.201.description": "Blokira dosadne web elemente i vraća izgubljeni prostor na zaslonu."
 	},
 	{
+		"filter.202.name": "EasyList Tajland",
+		"filter.202.description": "Filtar koji blokira oglase na tajlandskim web stranicama."
+	},
+	{
 		"filter.203.name": "Mađarski filtar",
 		"filter.203.description": "Popis filtara posebno dizajniranih za blokiranje oglasa na mađarskom jeziku."
 	},
@@ -241,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Filtar koji uklanja oglase, pratitelje i razne skripte na web stranicama s korejskim sadržajem. Na temelju Corset, Korean Adblock filter, Youslist. Kombinirano i prošireno s pravilima specifičnim za AdGuard za poboljšano filtriranje. Očekuje se da će se ovaj filtar koristiti zajedno s AdGuard Osnovnim filtrom."
+		"filter.227.description": "Filtar koji uklanja oglase i razne skripte na web stranicama s korejskim sadržajem. Kombinirano i prošireno s pravilima specifičnim za AdGuard za poboljšano filtriranje. Očekuje se da će se ovaj filtar koristiti zajedno s AdGuard Osnovnim filtrom."
 	},
 	{
 		"filter.228.name": "xinggsf",
