--- a/locales/hu/filters.json
+++ b/locales/hu/filters.json
@@ -160,6 +160,10 @@
 		"filter.201.description": "Blokkolja a bosszantó webes elemeket és visszaszerzi az a képernyő elvesztegetett részét."
 	},
 	{
+		"filter.202.name": "EasyList Thaiföld",
+		"filter.202.description": "Szűrőlista, amely blokkolja a hirdetéseket a thai nyelvű webhelyeken."
+	},
+	{
 		"filter.203.name": "Magyar szűrő",
 		"filter.203.description": "Hufilter. Szűrőlista, amely lehetővé teszi a hirdetések blokkolását a magyar nyelvű webhelyeken."
 	},
@@ -241,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Szűrő, amely eltávolítja a koreai tartalmú webhelyekről a hirdetéseket, a nyomkövetőket és a különféle szkripteket. A Corset, Korean Adblock filter és a Youslist szűrőkre épül. Ezen felül ki lett egészítve AdGuard-specifikus szabályokkal a továbbfejlesztett szűrés érdekében. Ezt a szűrőt az AdGuard Alap szűrővel együtt kell használni."
+		"filter.227.description": "Szűrő, amely eltávolítja a hirdetéseket és a különféle szkripteket a koreai tartalmi webhelyekről. Ezen felül ki lett egészítve AdGuard-specifikus szabályokkal a továbbfejlesztett szűrés érdekében. Ezt a szűrőt az AdGuard Alap szűrővel együtt kell használni."
 	},
 	{
 		"filter.228.name": "xinggsf",
