--- a/locales/ru/filters.json
+++ b/locales/ru/filters.json
@@ -84,7 +84,7 @@
 		"filter.103.description": "Болгарское дополнение к EasyList."
 	},
 	{
-		"filter.104.name": "EasyList Китайский ",
+		"filter.104.name": "EasyList Китайский",
 		"filter.104.description": "Китайское дополнение к EasyList."
 	},
 	{
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Фильтр, который удаляет рекламу и различные скрипты с сайтов с корейским контентом. Основан на фильтрах Corset, Korean Adblock filter, Youslist. Объединен с и дополнен правилами AdGuard для улучшенной фильтрации. Этот фильтр лучше использовать вместе с Базовым фильтром AdGuard."
+		"filter.227.description": "Фильтр, который удаляет рекламу и различные скрипты с сайтов с корейским контентом. Дополнен правилами AdGuard для улучшенной фильтрации. Этот фильтр лучше использовать вместе с Базовым фильтром AdGuard."
 	},
 	{
 		"filter.228.name": "xinggsf",
