--- a/locales/sk/filters.json
+++ b/locales/sk/filters.json
@@ -160,6 +160,10 @@
 		"filter.201.description": "Blokuje obťažujúce webové prvky a získava späť vzhľad stratenej obrazovky."
 	},
 	{
+		"filter.202.name": "EasyList Thailand",
+		"filter.202.description": "Filter, ktorý blokuje reklamy na thajských stránkach."
+	},
+	{
 		"filter.203.name": "Hungarian filter",
 		"filter.203.description": "Hufilter. Filter, ktorý špecificky odstraňuje reklamy na stránkach v maďarčine."
 	},
@@ -241,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Filter, ktorý odstraňuje reklamy a rôzne skripty z webových stránok s kórejským obsahom. Na základe Corset, kórejského filtra Adblock, Youslist. Kombinované a rozšírené o pravidlá špecifické pre AdGuard pre vylepšené filtrovanie. Očakáva sa, že tento filter sa bude používať spolu s filtrom AdGuard Base."
+		"filter.227.description": "Filter, ktorý odstraňuje reklamy a rôzne skripty z webových stránok s kórejským obsahom. Kombinované a rozšírené o pravidlá špecifické pre AdGuard pre vylepšené filtrovanie. Očakáva sa, že tento filter sa bude používať spolu s filtrom AdGuard Base."
 	},
 	{
 		"filter.228.name": "xinggsf",
