--- a/locales/vi/filters.json
+++ b/locales/vi/filters.json
@@ -160,6 +160,10 @@
 		"filter.201.description": "Chặn các yếu tố phiền nhiễu và giành lại không gian màn hình."
 	},
 	{
+		"filter.202.name": "EasyList Thailand",
+		"filter.202.description": "Bộ lọc chặn quảng cáo trên các trang tiếng Thái."
+	},
+	{
 		"filter.203.name": "Hungarian filter",
 		"filter.203.description": "Bộ lọc chỉ chặn quảng cáo trên các trang tiếng Hungary."
 	},
@@ -240,6 +244,10 @@
 		"filter.226.description": "Bộ lọc chặn quảng cáo tiếng Việt."
 	},
 	{
+		"filter.227.name": "List-KR",
+		"filter.227.description": "Bộ lọc loại bỏ quảng cáo, phần tử theo dõi, và nhiều đoạn mã khác từ những trang tiếng Hàn. Dựa trên Corset, Korean Adblock filter, Youslist. Kết hợp và phát triển với những quy tắc của riêng AdGuard nhằm tinh chỉnh bộ lọc. Khuyến khích dùng bộ lọc này với AdGuard Base filter."
+	},
+	{
 		"filter.228.name": "xinggsf",
 		"filter.228.description": "Chặn quảng cáo trên những nền tảng video Trung Quốc (MangoTV, DouYu và những người khác)."
 	},
@@ -254,6 +262,10 @@
 	{
 		"filter.231.name": "EasyList Spanish",
 		"filter.231.description": "Phần bổ trợ tiếng Tây Ban Nha cho EasyList."
+	},
+	{
+		"filter.232.name": "KAD - Anti-Scam",
+		"filter.232.description": "Bảo vệ bạn khỏi các loại lừa đảo, như nhắn tin số lượng lớn, trang bán hàng giả, v. v."
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
@@ -318,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Danh sách này bao gồm các trang tiếng Na Uy, Đan Mạch, Iceland, lãnh thổ Đan Mạch và dân cư Sami."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Danh sách này được thực hiện theo phong cách danh sách phiền toái của AdGuard và Fanboy. Nó kết hợp nhiều danh sách quốc tế tự hào nhất và được duy trì thường xuyên nhất của Dandelion Sprout, như một bộ sưu tập được quản lý vì lợi ích của sự đơn giản."
+	},
+	{
+		"filter.251.name": "Tiện ích rút gọn URL hợp lệ",
+		"filter.251.description": "Tự động xoá giá trị '$' và '&' không cần thiết khỏi URL, để dễ dàng hơn trong việc chép URL ở thanh địa chỉ và dán liên kết ở nơi khác."
 	}
 ]
