--- a/locales/zh/filters.json
+++ b/locales/zh/filters.json
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "从韩语内容网站移除广告和各种脚本的过滤器。它以 Corset、韩语 Adblock 过滤器和 Youslist 作为基础，并加 入 AdGuard 特定的规则予以增强以期达到强化的过滤效果。该过滤器应和 AdGuard 基础过滤器一起使用。"
+		"filter.227.description": "从韩语内容网站移除广告和各种脚本的过滤器。使用 AdGuard 特定的规则，它增强过滤效果。该过滤器应和 AdGuard 基础过滤器一起使用。"
 	},
 	{
 		"filter.228.name": "xinggsf",
