--- a/locales/ca/groups.json
+++ b/locales/ca/groups.json
@@ -12,6 +12,9 @@
 		"group.7.name": "Específics d'idioma"
 	},
 	{
+		"group.1.name": "Bloqueig d'anuncis"
+	},
+	{
 		"group.2.name": "Privacitat"
 	},
 	{
