--- a/locales/bg/groups.json
+++ b/locales/bg/groups.json
@@ -12,6 +12,9 @@
 		"group.7.name": "Специфични за езика"
 	},
 	{
+		"group.1.name": "Блокиране на рекламите"
+	},
+	{
 		"group.2.name": "Поверителност"
 	},
 	{
